aligned vertically and fixed content margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,17 +14,17 @@ header {
     padding: 20px;
     background-color: rgb(22, 100, 94);
     color: lightgoldenrodyellow;
+    display: flex;
+    justify-content: space-between;
 }
 
 header h1 {
     font-size: 42px;
-    display: inline-block;
 }
 
 header div {
     padding-top: 15px;
     margin-right:20px;
-    float: right;
     font-size: 28px;
 }
 
@@ -63,25 +63,24 @@ header a {
 /*sections*/
 .content {
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
     margin-bottom: 50px;
+    margin-left: 130px;
 }
 
 .section-title {
     color: rgb(35, 83, 105);
     font-size: 40px;
     text-align: right;
-    margin-left: 150px;
+    padding-right: 20px;
+    width: 250px;
     border-right: solid 7px rgb(29, 40, 71);
-
 }
 
 
 /*About Me section*/
 .about {
     display: flex;
-    justify-content: flex-start;
     margin-bottom: 30px;
 }
 
@@ -90,7 +89,8 @@ header a {
     flex-wrap: wrap;
     color: rgb(22, 100, 94);
     font-size: 16px;
-    margin: 0 160px 0 30px;
+    margin-left: 20px;
+    width: 65%
 }
 
 
@@ -101,57 +101,62 @@ header a {
     margin-bottom: 30px;
 }
 
+.work h3 {
+    color: lightgoldenrodyellow;
+    font-size: 22px;
+    padding: 10px;
+    background-color: rgb(63, 129, 155);
+}
+
 .work img {
     display: flex;
     flex-wrap: wrap;
     float: right;
-    width: 490px;
-    height: 240px;
+    width: 100%;
+    max-width: 400px;
+    height: 100%;
+    max-height: 195px;
     margin: 0 0 10px 20px;
-    border: solid 6px rgb(63, 129, 155);
+    border: solid 10px rgb(63, 129, 155);
 }
 
-.work h3 {
-    color: lightgoldenrodyellow;
-    font-size: 22px;
-    padding: 15px;
-    background-color: rgb(63, 129, 155);
+.primary img {
+    width: 100%;
+    max-width: 1800px;
+    height: 100%;
+    max-height: 700px;
+    margin-left: 20px;
 }
 
-#primary img {
-    width: 1000px;
-    height: 500px;
-}
-
-#primary h3 {
+.primary h3 {
     font-size: 28px;
     position: absolute;
-    margin-top: 350px;
-    margin-left: 20px;
+    margin-top: 28%;
+    margin-left: 0%;
 }
 
 #second h3 {
     position: absolute;
-    margin-top: 650px;
-    margin-left: 20px;
+    margin-top: 45%;
+    margin-left: 1.5%;
 }
 
 #third h3 {
     position: absolute;
-    margin-top: 650px;
-    margin-left: 530px;
+    margin-top: 45%;
+    margin-left: 29%;
 }
 
 #fourth h3 {
     position: absolute;
-    margin-top: 900px;
-    margin-left: 20px;
+    margin-top: 58.5%;
+    margin-left: 1.5%;
 }
 
 #fifth h3 {
     position: absolute;
-    margin-top: 900px;
-    margin-left: 530px;
+    margin-top: 58.5%;
+    margin-left: 29%;
 }
 
 
@@ -165,12 +170,11 @@ header a {
 .contacts {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
 }
 
-.contact { 
-    display: flex;
-    flex-wrap: wrap;
+.contact {
     font-size: 26px;
     border-bottom: solid 6px rgb(63, 129, 155);
-    margin: auto 50px;
+    margin-left: 100px;
 }
